<?xml version="1.0"?>
<package format="2">
  <name>costmap_converter</name>
  <version>0.0.9</version>
  <description>
    A ros package that includes plugins and nodes to convert occupied costmap2d cells to primitive types.
  </description>

  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>

  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>
  <author email="franz.albers@tu-dortmund.de">Franz Albers</author>
  <author email="otniel.rinaldo@tu-dortmund.de">Otniel Rinaldo</author> 

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/costmap_converter</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>class_loader</depend>
  <depend>costmap_converter_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <!-- <depend>dynamic_reconfigure</depend> -->
  <depend>pluginlib</depend>
  <depend>cv_bridge</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <costmap_converter plugin="${prefix}/plugins.xml" />
  </export>
</package>
