<?xml version="1.0"?>
<package format="2">
  <name>costmap_converter_core</name>
  <version>0.0.7</version>
  <description>
    A ros package that includes plugins and nodes to convert occupied costmap2d cells to primitive types.
  </description>

  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>

  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>
  <author email="franz.albers@tu-dortmund.de">Franz Albers</author>
  <author email="otniel.rinaldo@tu-dortmund.de">Otniel Rinaldo</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/costmap_converter</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>costmap_converter_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>

  <export>
    <!-- -->
  </export>

</package>
